--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
-    "mongoose": "^5.6.4"
+    "i": "^0.3.6",
+    "mongoose": "^5.6.4",
+    "mongoose-auto-increment": "^5.0.1",
+    "npm": "^6.10.1"
   }
 }
