--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "i": "^0.3.6",
     "mongoose": "^5.6.4",
     "mongoose-auto-increment": "^5.0.1",
+    "mongoose-paginate": "^5.0.3",
     "npm": "^6.10.1"
   }
 }
