--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "i": "^0.3.6",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.4",
     "mongoose-auto-increment": "^5.0.1",
     "mongoose-paginate": "^5.0.3",
-    "npm": "^6.10.1"
+    "multer": "^1.4.1",
+    "npm": "^6.10.1",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0"
   }
 }
